# research-knowledge-base

./: README.md  manage.py  pyproject.toml  pytest.ini  vids.jsonl  vids.txt  vids2.txt
.agents/rules/: endpoint-tests.md  type-checks.md  ui-backend-interactions.md  vector-db.md
core/: admin.py  api.py  models.py  services.py  tests.py  tests_api.py  urls.py  views.py
core/management/commands/: fetch_transcripts.py  seed_data.py
core/migrations/: 0001_initial.py  0002_question.py
core/templates/core/: base.html  node_detail.html  project_detail.html  project_list.html  question_detail.html
core/templates/core/partials/: autocomplete_dropdown.html
core/templatetags/: core_tags.py
research_knowledge_base/: asgi.py  settings.py  urls.py  wsgi.py
