[project]
name = "research-knowledge-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-click>=2.5.0",
    "django-ninja>=1.5.3",
    "yt-dlp>=2026.2.21",
]

[dependency-groups]
dev = [
    "model-bakery>=1.23.3",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]
